# Advent-of-Code

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yaml
2023/Day_01/: main.py
2023/Day_02/: main.py
2023/Day_03/: main.py
2023/Day_04/: main.py
2023/Day_05/: main.py
2023/Day_06/: main.py
2023/Day_07/: main.py
2023/Day_08/: main.py
2023/Day_09/: main.py
2023/Day_10/: main.py
2023/Day_11/: main.py
2023/Day_12/: main.py
2023/Day_13/: main.py
2023/Day_14/: main.py
2023/Day_15/: main.py
2023/Day_16/: main.py
2023/Day_17/: main.py
2023/Day_18/: main.py
2023/Day_19/: main.py
2023/Day_20/: main.py
scripts/: run_black.sh  run_pylint.sh
