[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Manuel Hettich <17690367+ManuelHettich@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pylint = "^3.0.2"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
